Performed code review, cleanup, and edits for maintenance purposes